<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Link service-->
    <string name="app_name">Линк сервис</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="btnChooseRole">Выбрать организацию</string>
    <string name="tvLogin">Введите код организации:</string>
    <string name="title_activity_lgin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Загрузка...-->
    <string name="text_load_splash">Линк-сервис</string>
    <string name="inf_com_title">Выберите направление обмена</string>
    <string name="addRoleText">Добавить организацию</string>
    <string name="doc_circul_title">Документообороты:</string>
    <string name="title_list_roles">Список организаций:</string>
    <string name="CreateDate">Дата создания:</string>
    <!--<string name="no_one_role">У вас пока не добавленно ни одной организации.</string>-->
    <string name="no_one_role">У вас в списке пока нет ни одной организации.</string>

    <!--const DC_Type DC_Accounting =-->
    <!--{"01", "Декларация", 		"Accounting",		"Отчётность",				&DC_Accounting_RouteList};-->
    <!--const DC_Type DC_UnformEnt =-->
    <!--{"02", "ОбращениеНП", 		"UnformEnt",		"Письма абонента",			&DC_UnformEnt_RouteList};-->
    <!--const DC_Type DC_Service =-->
    <!--{"06", "ИОН", 				"Service",			"ИОН",						&DC_Service_RouteList};-->
    <!--const DC_Type DC_Earning =-->
    <!--{"08", "Сведения2НДФЛ", 	"Earning",			"2-НДФЛ",					&DC_Earning_RouteList};-->
    <!--const DC_Type DC_Petition =-->
    <!--{"09", "Заявление", 		"Petition",			"Заявление",				&DC_Petition_RouteList};-->
    <!--const DC_Type DC_Document =-->
    <!--{"10", "Документ", 			"Document",			"Документ",					&DC_Document_RouteList};-->
    <!--const DC_Type DC_BankGuarantee =-->
    <!--{"11", "Уведомление", 		"BankGuarantee",	"Банковские гарантии",		&DC_BankGuarantee_RouteList};-->
    <!--const DC_Type DC_Presentation =-->
    <!--{"12", "Представление",		"Presentation",		"Представление",			&DC_Presentation_RouteList};-->

    <string name="FilterAccounting">Отчётность</string>
    <string name="FilterUnform">Письма абонента</string>
    <string name="FilterRequest">Запрос на ИОН</string>
    <string name="FilterNDFL2">2-НДФЛ</string>
    <string name="FilterPetition">Заявление</string>
    <string name="FilterRequirements">Требование</string>
    <string name="FilterBankGuarantee">Банковские гарантии</string>
    <string name="FilterRepresentation">Представление</string>
    <string name="FilterAll">Все</string>

    <string name="FilterByYear">Год</string>
    <string name="FilterByHalfYear">6 месяцев</string>
    <string name="FilterByMonth">Месяц</string>
    <string name="FilterByWeek">Неделя</string>
    <string name="FilterByDay">День</string>
    <string name="NoOneDocCircul">За выбранный период, по данному направлению, не найдено ни одного документооборота.</string>
    <string name="menu_search">Поиск</string>

</resources>
