<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.DocCirculActivity">

    <item
        android:id="@+id/filter_id"
        android:orderInCategory="100"
        android:icon="@drawable/ic_date_range_white_48dp"
        android:title="search"
        app:showAsAction="always">

        <!--<menu>-->
            <!--<group>-->

                <!--<item-->
                    <!--android:id="@+id/menuTimeFilterByYear"-->
                    <!--android:orderInCategory="10"-->
                    <!--app:showAsAction="never"-->
                    <!--android:title="@string/FilterByYear"/>-->

                <!--<item-->
                    <!--android:id="@+id/menuTimeFilterByHalfYear"-->
                    <!--android:orderInCategory="20"-->
                    <!--app:showAsAction="never"-->
                    <!--android:title="@string/FilterByHalfYear"/>-->

                <!--<item-->
                    <!--android:id="@+id/menuTimeFilterByMonth"-->
                    <!--android:orderInCategory="30"-->
                    <!--app:showAsAction="never"-->
                    <!--android:title="@string/FilterByMonth"/>-->

                <!--<item-->
                    <!--android:id="@+id/menuTimeFilterByWeek"-->
                    <!--android:orderInCategory="40"-->
                    <!--app:showAsAction="never"-->
                    <!--android:title="@string/FilterByWeek"/>-->

                <!--<item-->
                    <!--android:id="@+id/menuTimeFilterByDay"-->
                    <!--android:orderInCategory="50"-->
                    <!--app:showAsAction="never"-->
                    <!--android:title="@string/FilterByDay"/>-->

            <!--</group>-->
        <!--</menu>-->
    </item>

    <item
        android:id="@+id/filterByType"
        android:orderInCategory="100"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="search"
        app:showAsAction="always">

        <menu>
            <group>
                <item
                    android:id="@+id/menuFilterByTypeAll"
                    android:orderInCategory="100"
                    app:showAsAction="never"
                    android:title="@string/FilterAll"/>
                <item
                    android:id="@+id/menuTypeFilterByAccounting"
                    android:orderInCategory="200"
                    app:showAsAction="never"
                    android:title="@string/FilterAccounting"/>

                <item
                    android:id="@+id/menuTypeFilterByRequirements"
                    android:orderInCategory="300"
                    app:showAsAction="never"
                    android:title="@string/FilterRequirements"/>

                <item
                    android:id="@+id/menuTypeFilterByRequest"
                    android:orderInCategory="400"
                    app:showAsAction="never"
                    android:title="@string/FilterRequest"/>

                <item
                    android:id="@+id/menuTypeFilterByNDFL2"
                    android:orderInCategory="500"
                    app:showAsAction="never"
                    android:title="@string/FilterNDFL2"/>

                <item
                    android:id="@+id/menuTypeFilterByUnform"
                    android:orderInCategory="600"
                    app:showAsAction="never"
                    android:title="@string/FilterUnform"/>

                <item
                    android:id="@+id/menuTypeFilterByRepresentation"
                    android:orderInCategory="700"
                    app:showAsAction="never"
                    android:title="@string/FilterRepresentation"/>
            </group>
        </menu>
    </item>
</menu>