<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLogin"
            android:id="@+id/tvLogin"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLogin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:maxLength="8"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvLoginChecker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffd33a26"
            android:padding="5dp"
            android:visibility="gone"
            android:text="* Не введён"
            android:textColor="#fff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/addRoleText"
            android:id="@+id/button"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text_color"
            android:layout_marginTop="5dp"
            android:onClick="btnLoginClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_list_roles"
            android:id="@+id/tvTitleListRoles"
            android:layout_marginTop="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/no_one_role"
            android:id="@+id/tvNoOneRole"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:gravity="center" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvRoleList" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
